style changes: new font, remove yellow color, rounded piece buttons, spacing, new title image. fixed an odd unicode in json file

--- a/src/components/main_page/style.scss
+++ b/src/components/main_page/style.scss
@@ -142,6 +142,10 @@ select {
         ul {
             padding-left: 1.5em;
             font-size: 0.9em;
+
+            li > ul {
+                list-style: none;
+            }
         }
         a {
             color: $support_blue;
