--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,6 @@ $support_blue: rgb(42, 157, 245);
 $black: rgb(10, 10, 10);
 $green: rgb(90, 245, 40);
 $red: rgb(243, 86, 86);
-$yellow: rgb(236, 222, 24);
 
 /* breakpoints (default is bigger than desktop) */
 $desktop_bp: 1200px;
@@ -15,11 +14,11 @@ $mobile_bp: 580px;
 
 /* font family classes */
 .font-header {
-	font-family: 'Baloo 2', cursive;
+	font-family: 'Baloo Chettan 2', cursive;
 	font-weight: 600;
 }
 .font-body {
-	font-family: 'Baloo 2', cursive;
+	font-family: 'Baloo Chettan 2', cursive;
 	font-weight: 400;
 }
 
